fix: adjust z-index values for header and burger menu for improved layering

--- a/css/structure.css
+++ b/css/structure.css
@@ -11,7 +11,7 @@
 }
 
 .header {
-  z-index: 1;
+  z-index: 4;
   padding: 10px 0;
   .header-logo {
     width: 100px;
@@ -32,7 +32,7 @@ li ul li {
   position: absolute;
   right: 20px;
   top: 20px;
-  z-index: 2;
+  z-index: 5;
 }
 
 .burger-menu span {
